jmp changed the POM!!!!

--- a/spring-boot-samples/spring-boot-sample-atmosphere/pom.xml
+++ b/spring-boot-samples/spring-boot-sample-atmosphere/pom.xml
@@ -49,6 +49,8 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
+	<!-- JIMP CHANGING STUFFS AROUND -->
 	<build>
 		<plugins>
 			<plugin>
